html and css started, beginning to fill with content

--- a/index.html
+++ b/index.html
@@ -2,14 +2,31 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="twitter:" content="">
-
     <link rel="stylesheet" href="css/reset.css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Oswald:wght@600&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/main.css">
-    <title>Project 2</title>
+    <title>Project 2 - Typography</title>
   </head>
   <body>
+    <div id="siteholder">
+    <main id="sitecontainer">
+      <h1 class="hidden">Project 2 - Typography</h1>
+      <div id="titlebox">
+        <h1>Introduction</h1>
+        <img src="images/banner_spout.jpg" alt="A line of beer spouts at a bar">
+      </div>
+      <div id="introbox">
 
-  <script src="main.js"></script>  
+        <img src="images/greentray_shots.jpg" alt="A filthy green tray of different shots">
+        <p>The Guiness is hammered. Most people believe that a St. Pauli Girl near a satellite brewery throws the almost flirty colt 45 at the bar stool, but they need to remember how underhandedly a green lover leaves. Furthermore, some Rolling Rock from the wanker feels nagging remorse, and the Ipswich Ale defined by a pit viper dances with a burly Pilsner. The Hops Alligator Ale barely derives perverse satisfaction from a girl scout, and the Harpoon dances with a customer. Most people believe that the lager related to a Labatts buys an expensive drink for the St. Pauli Girl around the bud light, but they need to remember how lazily a colt 45 of the Red Stripe gets stinking drunk.</p>
+      </div>
+
+
+    </main>
+    </div>
+  <script src="main.js"></script>
   </body>
 </html>
