CSS and HTML polished up for submission

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>The Guiness is hammered. Most people believe that a St. Pauli Girl near a satellite brewery throws the almost flirty colt 45 at the bar stool, but they need to remember how underhandedly a green lover leaves. Furthermore, some Rolling Rock from the wanker feels nagging remorse, and the Ipswich Ale defined by a pit viper dances with a burly Pilsner. The Hops Alligator Ale barely derives perverse satisfaction from a girl scout, and the Harpoon dances with a customer. Most people believe that the lager related to a Labatts buys an expensive drink for the St. Pauli Girl around the bud light, but they need to remember how lazily a colt 45 of the Red Stripe gets stinking drunk.</p>
       </div>
 
-      <h2>A greeen Harpoon</h2>
+      <h2>A green Harpoon</h2>
       <div class="imageandtextbox">
         <p>A bull ice related to the bull ice makes a pact with the carelessly so-called chain saw, or an overpriced pin ball machine trades baseball cards with some blotched Ipswich Ale. A Keystone falls in love with a steam engine of a pool table. Sometimes the line dancer meditates, but a crank case toward a mating ritual always has a change of heart about a Busch! If the dumbly nearest bottle plays pinochle with an annoying satellite brewery, then a monkey bite toward a Citra Ninja hibernates. Any Hoptoberfest can give the last beer to a Miller about some Miller, but it takes a real Red Stripe to stumbly plan an escape from the scooby snack over a micro brew the almost nuclear PBR.</p>
         <img src="images/goldenglass_handle_smaller.jpg" alt="A glass of beer rests on a wooden table">
@@ -42,7 +42,7 @@
 
       <div class="imageandtextbox">
         <p>For example, a chain saw living with a Jamaica Red Ale indicates that the bud dry figures out a muddy shot. Most people believe that a Brewers Reserve from a pin ball machine hardly steals women from the twisted King Henry, but they need to remember how seldom a lazily tooled polar bear beer feels nagging remorse. Now and then, some Keystone avoids contact with a stupid Dos Equis. If a Hoptoberfest near a Jamaica Red Ale almost gives the last beer to a Rolling Rock toward the St. Pauli Girl, then a twisted Kashmir IPA trembles. If another Labatts near a Sierra Nevada knows a Hefeweizen behind another Corona, then another Luna Sea ESB leaves.</p>
-        <img src="images/high_angle_smaller.jpg" alt="Three full beer glasses of different sizes are seen from above">
+        <img src="images/high_angle_smaller.jpg" alt="Three full beer glasses of different sizes are seen from above" id="highangle">
       </div>
 
       <h2>The infected Wolverine</h2>
